--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.2",
+    "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.4.2",
+    "axios": "^0.26.0",
+    "date-fns": "^2.28.0",
     "material-ui": "^0.20.2",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
