--- a/package.json
+++ b/package.json
@@ -14,12 +14,20 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.4.2",
+    "@types/leaflet": "^1.7.9",
+    "@types/react-leaflet": "^2.8.2",
     "axios": "^0.26.0",
     "date-fns": "^2.28.0",
+    "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
+    "leaflet-geosearch": "^3.6.0",
+    "mapbox-gl": "^2.7.0",
     "material-ui": "^0.20.2",
+    "moment": "^2.29.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "2.7.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
